@@ -20,6 +20,11 @@ Bug fixes
   1.8.0_20 JVM bug in String.split.  (Ryan Ernst, Uwe Schindler,
   Robert Muir, Mike McCandless)
 
+* LUCENE-5919: Fix exception handling inside IndexWriter when
+  deleteFile throws an exception, to not over-decRef index files,
+  possibly deleting a file that's still in use in the index, leading
+  to corruption.  (Mike McCandless)
+
 Tests
 
 * LUCENE-5936: Add backcompat checks to verify what is tested matches known versions
